--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@ body {
 }
 
 body {
+  margin: auto;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
@@ -27,7 +28,7 @@ body {
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  margin: auto;
 }
 
 a {
